# ad-kb

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: abstract_BOSC2026.md  findings.md
docs/figures/: generate_figures.py
notebooks/: exploration.ipynb
src/ad_kg/: __init__.py  __main__.py  cli.py  config.py  models.py
src/ad_kg/extract/: __init__.py  ner.py  relations.py
src/ad_kg/graph/: __init__.py  loader.py  queries.py  schema.py
src/ad_kg/ingest/: __init__.py  clinical_trials.py  faers.py  gwas.py  pubmed.py
src/ad_kg/resolve/: __init__.py  canonicalize.py  embed.py
tests/: __init__.py  test_ingest.py  test_queries.py  test_resolve.py
